--- a/templates/tpl/option.tmpl
+++ b/templates/tpl/option.tmpl
@@ -26,22 +26,32 @@ func New{{ .StructName }}{{if .GenericParams}}[{{range $index, $param := .Generi
 {{ if .OptionalFields }}
 {{ range $field := .OptionalFields }}
 
+{{/*字段名称 首字母小写*/}}
+{{ $firstLetterToLower :=  $field.Name | bigCamelToSmallCamel }}
+
+{{/*字段名称 首字母大写*/}}
+{{ $firstLetterToUpper :=  $field.Name | capitalizeFirstLetter }}
+
+{{/*字段名称 获取小写首字母*/}}
+{{ $firstLetter :=  $field.Name | getFirstLetter }}
+
 /**
  * field name: {{ $field.Name}}
  */
 type {{ $field.Name}}{{if $.GenericParams}}[{{range $index, $param := $.GenericParams}}{{if $index}}, {{end}}{{$param.Name}} {{$param.Type}}{{end}}]{{end}} struct {
-	{{ $field.Name | bigCamelToSmallCamel }} {{ $field.Type }}
+	{{ $firstLetterToLower }} {{ $field.Type }}
 }
 
 // apply the {{ $field.Name }} option to the given struct.
-func ({{ $field.Name | bigCamelToSmallCamel }} {{ $field.Name}}{{if $.GenericParams}}[{{range $index, $param := $.GenericParams}}{{if $index}}, {{end}}{{$param.Name}}{{end}}]{{end}}) apply (opt *{{ $.StructName }}{{if $.GenericParams}}[{{range $index, $param := $.GenericParams}}{{if $index}}, {{end}}{{$param.Name}}{{end}}]{{end}}) {
-	opt.{{ $field.Name }} = {{ $field.Name | bigCamelToSmallCamel }}.{{ $field.Name | bigCamelToSmallCamel }}
+func ({{ $firstLetter }} {{ $field.Name}}{{if $.GenericParams}}[{{range $index, $param := $.GenericParams}}{{if $index}}, {{end}}{{$param.Name}}{{end}}]{{end}}) apply (opt *{{ $.StructName }}{{if $.GenericParams}}[{{range $index, $param := $.GenericParams}}{{if $index}}, {{end}}{{$param.Name}}{{end}}]{{end}}) {
+	opt.{{ $field.Name }} = {{ $firstLetter }}.{{ $firstLetterToLower }}
 }
 
-// With{{ $field.Name }} Option.
-func With{{ $field.Name }}{{if $.GenericParams}}[{{range $index, $param := $.GenericParams}}{{if $index}}, {{end}}{{$param.Name}} {{$param.Type}}{{end}}]{{end}}(opt{{ $field.Name | capitalizeFirstLetter }} {{ $field.Type }}) {{ $.StructName }}Option{{if $.GenericParams}}[{{range $index, $param := $.GenericParams}}{{if $index}}, {{end}}{{$param.Name}}{{end}}]{{end}} {
+
+// With{{ $firstLetterToUpper }} Option.
+func With{{ $firstLetterToUpper }}{{if $.GenericParams}}[{{range $index, $param := $.GenericParams}}{{if $index}}, {{end}}{{$param.Name}} {{$param.Type}}{{end}}]{{end}}(opt{{ $firstLetterToUpper }} {{ $field.Type }}) {{ $.StructName }}Option{{if $.GenericParams}}[{{range $index, $param := $.GenericParams}}{{if $index}}, {{end}}{{$param.Name}}{{end}}]{{end}} {
 	return {{ $field.Name}}{{if $.GenericParams}}[{{range $index, $param := $.GenericParams}}{{if $index}}, {{end}}{{$param.Name}}{{end}}]{{end}}{
-        {{ $field.Name | bigCamelToSmallCamel }}: opt{{ $field.Name | capitalizeFirstLetter }},
+        {{ $firstLetterToLower }}: opt{{ $firstLetterToUpper }},
     }
 }
 
